<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/back3">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/company_logo"
                    android:src="@drawable/ic_company"
                    android:padding="5dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/company_logo"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_horizontal"
                    android:layout_alignParentStart="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/credits_information"
                        android:textColor="@android:color/black"
                        android:id="@+id/textView"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:padding="10dp"  />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvProjectManager"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/credits_project_manager"
                        android:textColor="@color/cardview_dark_background"
                        android:gravity="center"
                        android:padding="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/credits_student_one"
                        android:textColor="@android:color/black"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/credits_student_two"
                        android:textColor="@android:color/black"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/credits_student_three"
                        android:textColor="@android:color/black"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/credits_student_four"
                        android:textColor="@android:color/black"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/credits_student_five"
                        android:textColor="@android:color/black"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/credits_student_six"
                        android:textColor="@android:color/black"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/credits_student_seven"
                        android:textColor="@android:color/black"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/credits_student_eight"
                        android:textColor="@android:color/black"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/credits_student_nine"
                        android:textColor="@android:color/black"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/credits_student_ten"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>
